--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter_username: shybovycha
 github_username:  shybovycha
 excerpt_separator: '<!--more-->'
 paginate: 10
-highlighter: pygments
+highlighter: rouge
 gems: [jekyll-paginate]
 
 # Build settings
