--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: shybovycha@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My greatest thoughts are written down here.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://shybovycha.github.io/" # the base hostname & protocol for your site
+url: "http://shybovycha.github.io" # the base hostname & protocol for your site
 twitter_username: shybovycha
 github_username:  shybovycha
 excerpt_separator: '<!--more-->'
