--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ github_username:  shybovycha
 excerpt_separator: '<!--more-->'
 paginate: 10
 highlighter: rouge
-plugins: [jekyll-paginate, jemoji, jekyll-sitemap]
 
 # Build settings
 markdown: kramdown
@@ -33,6 +32,8 @@ plugins_dir: ./_plugins
 plugins:
   - jekyll-word-list
   - jekyll-paginate
+  - jekyll-sitemap
+  - jemoji
 
 exclude:
   - _plugins
