--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ compress_html:
 plugins_dir: ./_plugins
 
 plugins:
-  - jekyll-word-list
+  # - jekyll-word-list
   - jekyll-paginate
   - jekyll-sitemap
   - jemoji
