--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/shybovycha/shybovycha.github.io#readme",
   "devDependencies": {
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "esbuild": "^0.17.17",
     "gray-matter": "^4.0.3",
