--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   "devDependencies": {
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "esbuild": "^0.17.17",
+    "esbuild": "^0.17.19",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "marked": "^4.3.0",
+    "marked": "^5.0.2",
+    "marked-gfm-heading-id": "^3.0.3",
+    "marked-highlight": "^1.0.2",
+    "marked-mangle": "^1.0.1",
+    "marked-smartypants": "^1.0.2",
+    "marked-xhtml": "^1.0.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
