--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "url": "git+https://github.com/shybovycha/shybovycha.github.io.git"
   },
   "scripts": {
-    "preprocess-build": "npm exec esbuild -- _build/index.js --outfile=_build/builder_bundle.js --platform=node --bundle",
+    "preprocess-build": "npm exec esbuild -- _build/index.ts --outfile=_build/builder_bundle.js --platform=node --bundle",
     "build": "npm run preprocess-build && node _build/builder_bundle.js"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
+    "@types/lodash-es": "^4.17.7",
+    "@types/marked": "^4.3.0",
+    "@types/node": "^20.1.5",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "esbuild": "^0.17.19",
