--- a/.github/workflows/publish_gh_pages.yml
+++ b/.github/workflows/publish_gh_pages.yml
@@ -16,14 +16,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 19.x
-        uses: actions/setup-node@v3.8.1
-        with:
-          node-version: 20.x
+      - name: Use Bun instead of Node
+        uses: oven-sh/setup-bun@v1
 
-      - run: npm ci
+      - run: bun install
 
-      - run: npm run build
+      - run: bun run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2.0.0
