--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/shybovycha/shybovycha.github.io.git"
   },
   "scripts": {
-    "build": "bun build _build/index.ts --outdir _build/ --target browser --entry-naming \"builder_bundle.[ext]\" --asset-naming \"[name].[ext]\" && bun _build/index.ts"
+    "build": "bun build _build/index.ts --outdir _build/ --target browser --entry-naming \"builder_bundle.[ext]\" --asset-naming \"[name]_bundle.[ext]\" && bun _build/index.ts"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
