Generate RSS atom

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.8",
     "bun-types": "latest",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
+    "fast-xml-parser": "^4.3.4",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "marked": "^11.2.0",
@@ -35,7 +37,8 @@
     "marked-xhtml": "^1.0.8",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
