--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "serve": "bun _build/server.ts"
   },
   "devDependencies": {
+    "@shikijs/rehype": "^3.2.1",
     "@types/lodash": "^4.14.202",
     "@types/lodash-es": "^4.17.12",
-    "@types/marked": "^4.3.0",
     "@types/node": "^20.11.10",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.48",
@@ -30,16 +30,13 @@
     "fast-xml-parser": "^4.3.4",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "marked": "^11.2.0",
-    "marked-extended-tables": "^1.0.8",
-    "marked-gfm-heading-id": "^3.1.2",
-    "marked-highlight": "^2.1.0",
-    "marked-mangle": "^1.1.6",
-    "marked-smartypants": "^1.1.5",
-    "marked-xhtml": "^1.0.8",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "unified": "^11.0.5",
     "uuid": "^9.0.1"
   },
   "peerDependencies": {
