--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve": "bun _build/server.ts"
   },
   "devDependencies": {
+    "@adobe/remark-gridtables": "^3.0.12",
     "@shikijs/rehype": "^3.2.1",
     "@types/lodash": "^4.14.202",
     "@types/lodash-es": "^4.17.12",
