Minify production build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/shybovycha/shybovycha.github.io.git"
   },
   "scripts": {
-    "build": "bun build _build/index.ts --outdir _build_tmp/ --target browser --entry-naming \"builder_bundle.[ext]\" --asset-naming \"[name]_bundle.[ext]\" && bun _build/index.ts",
+    "build": "bun build _build/index.ts --outdir _build_tmp/ --minify --target browser --entry-naming \"builder_bundle.[ext]\" --asset-naming \"[name]_bundle.[ext]\" && bun _build/index.ts",
     "build-dev": "bun build _build/index.ts --outdir _build_tmp/ --target browser --entry-naming \"builder_bundle.[ext]\" --asset-naming \"[name]_bundle.[ext]\" && BUILD_DRAFTS=true  bun _build/index.ts",
     "serve": "bun _build/server.ts"
   },
