--- a/package.json
+++ b/package.json
@@ -16,26 +16,28 @@
     "serve": "bun _build/server.ts"
   },
   "devDependencies": {
-    "@adobe/remark-gridtables": "^3.0.12",
-    "@shikijs/rehype": "^3.2.1",
-    "@types/lodash": "^4.17.16",
+    "@adobe/remark-gridtables": "^3.0.13",
+    "@shikijs/rehype": "^3.6.0",
+    "@types/lodash": "^4.17.17",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.17.28",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "^20.19.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^9.0.8",
     "bun-types": "latest",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.5.3",
     "gray-matter": "^4.0.3",
+    "hast-util-to-html": "^9.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.1",
+    "remark-rehype": "^11.1.2",
     "unified": "^11.0.5",
     "uuid": "^9.0.1"
   },
