--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,5 +21,10 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"change-case": "^5.4.4",
+		"date-fns": "^4.1.0",
+		"lodash": "^4.17.21"
 	}
 }
