--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,8 +23,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@adobe/remark-gridtables": "^3.0.13",
 		"change-case": "^5.4.4",
 		"date-fns": "^4.1.0",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"remark-gfm": "^4.0.1",
+		"shiki": "^3.6.0"
 	}
 }
